# otpgui

./: .flake8  .gitignore  .test-otp.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  example-otp.yml  otp-example.yml  otpgtk.py  otpgui.1  otpgui.desktop  otpgui.glade  otpgui.py  otpversion.py  pyproject.toml  requirements.txt  test_otpgui.py
.github/workflows/: main.yml  releasepkg.yml  testpr.yml
archpkg/: PKGBUILD.tmpl  create-pkg.sh  install-pkg.sh
debian/: changelog  control  install  rules
debpkg/: create-pkg.sh
docker/: Dockerfile.archlinux  Dockerfile.ubuntu
examples/: OTPTUI.md  otp-script-example.sh  otpmenu.sh  otptui.sh  sops-example.yml
icons/: LICENSE.md
tools/: debian-changelog-generator.py
