[tool.poetry]
name = "otpgui"
version = "0.2.2"
description = "Otp Generator GUI with python"
authors = ["Gianluca Mascolo <gianluca@gurutech.it>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/gianluca-mascolo/otpgui/"
repository = "https://github.com/gianluca-mascolo/otpgui/"
readme = "README.md"
packages = [
    { include = "otpgui.py" },
    { include = "otpversion.py" },
]
classifiers = [
    "Environment :: X11 Applications :: GTK",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)"
]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
pyotp = "^2.6.0"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
otpgui = "otpgui:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
