[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "otpgui"
version = "0.2.9"
description = "Otp Generator GUI with python"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [
    {name = "Gianluca Mascolo", email = "gianluca@gurutech.it"}
]
maintainers = [
    {name = "Gianluca Mascolo", email = "gianluca@gurutech.it"}
]
keywords = ["otp"]
dependencies = [
    "PyYAML>=6.0",
    "pyotp>=2.6",
    "PyGObject>=3.42",
    "pycairo>=1.25,<2.0"
]

[project.urls]
Homepage = "https://github.com/gianluca-mascolo/otpgui/"
Repository = "https://github.com/gianluca-mascolo/otpgui/"
Documentation = "https://github.com/gianluca-mascolo/otpgui/blob/main/README.md"
"Bug Tracker" = "https://github.com/gianluca-mascolo/otpgui/issues"

[project.scripts]
otpgui = "otpgui:main"

[tool.poetry]
name = "otpgui"
version = "0.2.9"
description = "Otp Generator GUI with python"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Gianluca Mascolo <gianluca@gurutech.it>"]
maintainers = ["Gianluca Mascolo <gianluca@gurutech.it>"]
keywords = ["otp"]

packages = [
  { include = "otpgui.py" },
  { include = "otpversion.py" },
]

[tool.poetry.urls]
Homepage = "https://github.com/gianluca-mascolo/otpgui/"
Repository = "https://github.com/gianluca-mascolo/otpgui/"
Documentation = "https://github.com/gianluca-mascolo/otpgui/blob/main/README.md"
"Bug Tracker" = "https://github.com/gianluca-mascolo/otpgui/issues"

[tool.poetry.scripts]
otpgui = "otpgui:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
PyYAML = ">=6.0"
pyotp = ">=2.6"
PyGObject = ">=3.42"
pycairo = ">=1.25,<2.0"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
pytest = ">=7.2.2"
pytest-cov = "^7.0.0"

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.2.2",
]

# Tool configurations
[tool.black]
line-length = 200
target-version = ['py39', 'py310', 'py311', 'py312']
extend-exclude = '''
/(
  old
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 7
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".gitignore", ".venv", "old"]
